<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SoundRecoder</string>
    <string name="select_audio">选择音频</string>
    <string name="start_record">开始录音</string>

    <string name="record_list_tip">没有找到录音文件\n\n您可以使用该应用提供的录音功能进行录音，或者将您需要上传的文件放入根目录下SoundRecoder文件夹中，再刷新列表</string>

    <!--selete audio-->
    <string name="select_audio_name_hint">录音</string>
    <string name="select_audio_time_hint">2018-03-12 9:00</string>
    <string name="select_audio_length_hint">00:10:00</string>

    <!--recorder-->
    <string name="btn_timing">00:00</string>
    <string name="btn_record">录音</string>
    <string name="btn_play_pause">停止</string>
    <string name="btn_record_complete">完成</string>
    <string name="btn_play">播放</string>
    <string name="btn_play_continue">继续</string>
    <string name="btn_audio_list">查看录音列表</string>

    <string name="record_your_message" msgid="1583671906691662148">"录音"</string>
    <string name="message_recorded" msgid="381539460921872233">"信息已录制"</string>
    <string name="review_message" msgid="201616012287839474">"查看信息"</string>
    <string name="recording" msgid="4426791467211376099">"录音"</string>
    <string name="recording_stopped" msgid="1580278719585249612">"录音停止"</string>
    <string name="storage_is_full" msgid="416039755956726221">"存储空间已满"</string>
    <string name="max_length_reached" msgid="6398215743584093353">"已达到长度上限"</string>
    <string name="insert_sd_card" msgid="1007630222084726808" product="default">"请插入SD卡"</string>
    <string name="min_available" msgid="5493947690062988925">"还剩<xliff:g id="MINUTES">%d</xliff:g>分钟"</string>
    <string name="sec_available" msgid="2297020788861694399">"还剩<xliff:g id="SECONDS">%d</xliff:g>秒"</string>
    <string name="accept" msgid="1888285552128743656">"完成"</string>
    <string name="discard" msgid="761613433029406319">"放弃"</string>
    <string name="button_ok" msgid="3004911343723076226">"确定"</string>
    <!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <!-- no translation found for audio_db_title_format (7912182366970749312) -->
    <!-- the name under which recordings will be visible in the media database is formatted like this -->
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <skip />
    <string name="audio_db_artist_name" msgid="961640229118120080">"您的录音"</string>
    <string name="audio_db_album_name" msgid="9072588113803264440">"录音"</string>
    <string name="audio_db_playlist_name" msgid="5592939050047058162">"我的录音"</string>
    <string name="error_sdcard_access" msgid="5750308258096153274" product="default">"无法使用SD卡。"</string>
    <string name="error_app_internal" msgid="312884382388702022">"发生内部应用错误。"</string>
    <string name="error_mediadb_new_record" msgid="261714902333432462">"无法保存录制的音频。"</string>

</resources>
