<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/timerViewLayout"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/timerView"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/stateMessage2Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timerView"
            android:layout_centerHorizontal="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/stateLED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/stateMessage2"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/recording"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/stateMessage1"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stateMessage2Layout"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/holo_red_light" />

        <ProgressBar
            android:id="@+id/stateProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timerView"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:max="100"
            android:orientation="horizontal"
            android:progress="0" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/exitButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/discardButton"
                style="@style/main_center_15"
                android:layout_width="wrap_content"
                android:background="@null"
                android:drawableTop="@mipmap/btn_record_complete_gray"
                android:text="@string/discard"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exitButtons"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_record_left_tv"
                style="@style/main_center_15"
                android:drawableTop="@mipmap/btn_play"
                android:text="@string/btn_play"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_record_center_tv"
                style="@style/main_center_15"
                android:drawableTop="@mipmap/btn_record"
                android:text="@string/btn_record" />

            <TextView
                android:id="@+id/btn_record_right_tv"
                style="@style/main_center_15"
                android:drawableTop="@mipmap/btn_record_pause"
                android:text="@string/btn_play_pause"
                android:visibility="gone" />

            <TextView
                android:id="@+id/acceptButton"
                style="@style/main_center_15"
                android:background="@null"
                android:drawableTop="@mipmap/btn_record_complete"
                android:text="@string/accept"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/recorder_list_view_include" />

</LinearLayout>
