<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/id_ll_audio_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_audio_name"
                style="@style/main_center_15"
                tools:text="@string/select_audio_name_hint" />

            <TextView
                android:id="@+id/id_audio_time"
                style="@style/main_center_15"
                android:layout_width="wrap_content"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/select_audio_time_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_audio_time_length"
                style="@style/main_center_15"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/select_audio_length_hint" />

            <RadioButton
                android:id="@+id/id_audio_is_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@null"
                android:checked="false"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/id_audio_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/delete" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_select_play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/btn_play"
            android:padding="3dp" />

        <TextView
            android:id="@+id/tv_select_stop_play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/btn_play_pause"
            android:padding="3dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_select_time_process"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            tools:text="00:05" />

        <ProgressBar
            android:id="@+id/stateProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:max="100"
            android:orientation="horizontal"
            android:progress="0" />

        <TextView
            android:id="@+id/btn_select_time_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:text="05:02" />
    </LinearLayout>

</LinearLayout>